kubernetes/base/istio/destinationrule-frontend.yaml
apiVersion: networking.istio.io/v1
kind: DestinationRule

metadata:
  name: frontend
  namespace: microservices

spec:
  host: frontend

  subsets:
    - name: stable
      labels:
        version: stable

    - name: canary
      labels:
        version: canary
