kubernetes/base/istio/serviceentry-postgres.yaml
apiVersion: networking.istio.io/v1
kind: ServiceEntry
metadata:
  name: postgres-tcp
  namespace: microservices
spec:
  hosts:
    - postgres-headless.microservices.svc.cluster.local
  location: MESH_INTERNAL
  ports:
    - number: 5432
      name: tcp-postgres
      protocol: TCP
  resolution: DNS
