kubernetes/base/istio/virtualservice-bluegreen.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: frontend-bluegreen
  namespace: microservices

spec:
  hosts:
    - "*"

  gateways:
    - frontend-gateway

  http:
    - route:
        - destination:
            host: frontend
            subset: blue
          weight: 0

        - destination:
            host: frontend
            subset: green
          weight: 100
