kubernetes/base/istio/virtualservice-frontend.yaml
apiVersion: networking.istio.io/v1
kind: VirtualService

metadata:
  name: frontend
  namespace: microservices

spec:
  hosts:
    - "*"
  gateways:
    - frontend-gateway

  http:
    - route:
        - destination:
            host: frontend
            subset: stable
          weight: 90

        - destination:
            host: frontend
            subset: canary
          weight: 10
